--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -1,4 +1,5 @@
  body {
+  background: repeating-linear-gradient(45deg, rgba(255, 0, 0, 0.2), rgba(0, 255, 0, 0.3));
   display: flex;
   flex-direction: column;
 }
