designed a headphone homepage

--- a/headphones/4-styles.css
+++ b/headphones/4-styles.css
@@ -178,6 +178,148 @@ button:active{
   color: #071629;
 
 }
+/*CSS style for 2-index.html*/
+
+.result-ctn {
+  min-height: 80vh;
+  width: 100%;
+  background-image: 
+    linear-gradient(rgba(151, 151, 151, 0.2), rgba(7, 22, 41, 0.5)),
+    url(images/headphones_hero_2.jpg);
+  background-size: cover;
+  background-position: center;
+
+  align-content: center;
+  padding-bottom: 55px;
+  color: #FFFFFF;
+}
+
+.container1{
+  max-width: 1000px;
+  margin: 130px auto 36px auto;
+  padding: 0 20px;
+}
+
+.container1 h1{
+  margin-bottom: 35px;
+  margin-left: 23%;
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.ctn-paragraph1{
+  font-size: 16px;
+  line-height: 25px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.results{
+  display: flex;
+  align-items: center;
+  padding-top: 30px;
+  gap: 70px;
+    
+}
+
+.results img{
+  width: 180px;
+  height: 180px;
+}
+.result-card{
+  align-content: center;
+  position: relative;
+}
+
+.result-card .result-para1{
+  position: absolute;
+  top: 70px;
+  left: 38px;
+  font-size: 46px;
+  font-weight: bold;
+}
+
+.result-card .result-para2{
+  position: absolute;
+  top: 70%;
+  left: 30px;
+  font-size: 14px;
+}
+
+/*CSS style for 3-index.html*/ 
+
+.container2{
+  text-align: center;
+  max-width: 1000px;
+  margin: 100px auto 1px auto;
+}
+
+.container2 h1{
+ font-size: 32px;
+ font-weight: 600; 
+ color: #071629;
+}
+
+
+.container2 form{
+  max-width: 400px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+  padding-top: 20px;
+}
+
+.container2 button{
+  margin-top: 55px;
+}
+
+input, textarea{
+  padding: 10px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  color: #071629;
+}
+
+/*CSS style for 4-index.html*/
+
+.footer-ctn {
+  height: 249px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: #071629;
+  color: #FFFFFF;
+  padding-bottom: 25px;
+}
+.footer-ctn1 {
+  margin-bottom: 80px;
+  display: flex;
+  align-items: center;
+  gap: 140vh; 
+}
+.footer-ctn1 p {
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 12px;
+}
+
+.footer-ctn1 img{
+  width: 161px;
+  height: 32px;
+}
+
+.icon1{
+  width: 30px;
+  height: 30px;
+  font-size: 30px; /* Needed so the icon scales to fit the box */
+  line-height: 30px;
+  padding-left: 15px;
+  
+}
 
 @media screen and (max-width: 480px) {
   .nav-links ul{
@@ -245,13 +387,21 @@ button:active{
 .services {
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
 }
 service-card p{
   min-height: 3em;
 }
-
-
-
+.results{
+  flex-direction: column;
+}
+.container1 h1,
+.ctn-title{
+  font-size: 20px;
+}
+.footer-ctn1{
+  flex-direction: column;
+  gap: 15px;
+}
 }
 
