--- a/headphones/3-styles.css
+++ b/headphones/3-styles.css
@@ -148,7 +148,6 @@ button:active{
   align-items: center;
   padding-top: 80px;
   padding-bottom: 100px;
-  color: #071629;
 }
 
 .service-card {
@@ -164,19 +163,110 @@ button:active{
 .ctn-paragraph{
   font-size: 16px;
   line-height: 25px;
-  text-align: center; 
-  color: #071629;
+  text-align: center;
+  margin-top: 150px;
+}
+/*CSS style for 2-index.html*/
 
+.result-ctn {
+  min-height: 80vh;
+  width: 100%;
+  background-image: 
+    linear-gradient(rgba(151, 151, 151, 0.2), rgba(0, 0, 0, 0.9)),
+    url(images/headphones_hero_2.jpg);
+  background-size: cover;
+  background-position: center;
+
+  align-content: center;
+  padding-bottom: 55px;
+  color: #FFFFFF;
 }
 
-.ctn-title{
-  margin-top: 130px;
-  padding-bottom: 20px;
-  margin-left: 40%;
-  font-size: 32px;
+.container1{
+  max-width: 1000px;
+  margin: 0 auto;
+  margin-top: 14%;
+  padding: 0 20px;
+}
+
+.container1 h1{
+  margin-bottom: 35px;
+  margin-left: 30%;
+}
+
+.ctn-paragraph1{
+  font-size: 16px;
+  line-height: 25px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.results{
+  display: flex;
+  align-items: center;
+  padding-top: 30px;
+  gap: 70px;
+    
+}
+
+.results img{
+  width: 180px;
+  height: 180px;
+}
+.result-card{
+  align-content: center;
+  position: relative;
+}
+
+.result-card .result-para1{
+  position: absolute;
+  top: 70px;
+  left: 38px;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.result-card .result-para2{
+  position: absolute;
+  top: 70%;
+  left: 30px;
+  font-size: 14px;
+}
+
+.container2{
+  text-align: center;
+  max-width: 1000px;
+  margin: 100px auto 1px auto;
+}
+
+.container2 h1{
+ font-size: 32px;
+ font-weight: 600; 
+ color: #071629;
+}
+
+
+.container2 form{
+  max-width: 400px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+  padding-top: 20px;
+}
+
+.container2 button{
+  margin-top: 55px;
+}
+
+input, textarea{
+  padding: 10px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  outline: none;
+  font-size: 14px;
   font-weight: 600;
   color: #071629;
-
 }
 
 @media screen and (max-width: 480px) {
